# hydra

./: .gitignore  Makefile  README.md  go.mod  go.sum
.superpowers/sdd/: terminal-final-fixes.md
Hydra/: Info.plist  Package.resolved  Package.swift  project.yml
Hydra/Hydra/: HydraApp.swift
Hydra/HydraiOS/: App.swift  PlaceholderView.swift  README.md  RootView.swift
Hydra/Tests/: AIProviderConfigTests.swift
Hydra/scripts/: bundle-app.sh
Naga/: Package.swift
Naga/Naga/: NagaApp.swift
cmd/cluster-agent/: main.go
cmd/clusterctl/: main.go
cmd/server/: agent_adapters.go  ai.go  main.go
config/: config.go  config.yaml.example  config_test.go
internal/agent/: agent.go  election.go  election_test.go  heartbeat.go  heartbeat_test.go  systemd.go  systemd_test.go
internal/cli/: config_cmd.go  device.go  monitor.go  orch.go  root.go  server.go
internal/domain/: cluster.go  federation.go  gpu.go  gpu_test.go  heartbeat.go  metrics.go  node.go  node_test.go  orch.go  orch_test.go  task.go  task_repository.go  task_test.go  taskqueue.go  taskqueue_async_test.go  taskqueue_test.go  taskqueue_writethrough_test.go
internal/repository/: repository.go
internal/usecase/: device_usecase.go  (+10 more)
python/: README.md  pyproject.toml
python/src/hydra_client/: __init__.py  client.py  errors.py  models.py  sim.py  worker.py
python/tests/: test_client.py  test_errors.py  test_models.py  test_monitoring.py  test_public_api.py  test_sim.py  test_sim_parity.py  test_wait_and_batch.py  test_worker.py
python/tests/fixtures/scheduler/: cases.json
scripts/: serve.sh
(+213 files in other folders)
